<resources>
    <string name="next_button">NEXT >></string>
    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>
    <string name="prev_button">&lt;&lt; PREV</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_no">Repetition Interval</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="spinner_title">Select Tank</string>
    <string name="time">Time</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="undo_label">Undo</string>
    <string name="app_name">Mobi Water</string>
    <string name="empty_string">empty</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="delete_label">Delete</string>
    <string name="date">Date</string>
    <string name="back_button">BACK &gt;&gt;</string>
</resources>