<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:minHeight="?actionBarSize"
        fab:contentInsetLeft="0.0dip"
        fab:contentInsetStart="16.0dip"
        fab:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        fab:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:id="@+id/add_reminder_layout_top"
        android:layout_width="fill_parent"
        android:layout_height="148.0dip"
        android:layout_below="@+id/toolbar"
        android:background="@color/primary"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="fill_parent"
            android:layout_height="140.0dip"
            android:layout_marginLeft="72.0dip"
            android:layout_marginRight="16.0dip"
            android:gravity="center|left|top"
            android:hint="@string/add_reminder"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorBlack"
            android:textSize="25.0dip" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/add_reminder_layout_top">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details"
                android:layout_width="fill_parent"
                android:layout_height="72.0dip"
                android:layout_marginLeft="72.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textColor="@color/colorBlack"
                android:textSize="15.0dip" />

            <RelativeLayout
                android:id="@+id/date"
                android:layout_width="fill_parent"
                android:layout_height="72.0dip"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:onClick="setDate">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16.0dip"
                    android:layout_marginRight="32.0dip"
                    android:src="@drawable/ic_view_day_grey600_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/date_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />

                    <TextView
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="72.0dip"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:onClick="setTime">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16.0dip"
                    android:layout_marginRight="32.0dip"
                    android:src="@drawable/ic_access_time_grey600_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/time_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />

                    <TextView
                        android:id="@+id/set_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repeat"
                android:layout_width="fill_parent"
                android:layout_height="72.0dip">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16.0dip"
                    android:layout_marginRight="32.0dip"
                    android:src="@drawable/ic_sync_grey600_24dp" />

                <LinearLayout
                    android:id="@+id/repeat_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/repeat_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />

                    <TextView
                        android:id="@+id/set_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />
                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8.0dip"
                    android:layout_marginRight="16.0dip"
                    android:checked="true"
                    android:onClick="onSwitchRepeat"
                    android:textOff="Off"
                    android:textOn="On" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RepeatNo"
                android:layout_width="fill_parent"
                android:layout_height="72.0dip"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:onClick="setRepeatNo">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16.0dip"
                    android:layout_marginRight="32.0dip"
                    android:src="@drawable/ic_unfold_more_grey600_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/repeat_no_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />

                    <TextView
                        android:id="@+id/set_repeat_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RepeatType"
                android:layout_width="fill_parent"
                android:layout_height="72.0dip"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:onClick="selectRepeatType">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16.0dip"
                    android:layout_marginRight="32.0dip"
                    android:src="@drawable/ic_subject_grey600_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/repeat_type_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />

                    <TextView
                        android:id="@+id/set_repeat_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="15.0dip" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:layout_below="@+id/add_reminder_layout_top"
        android:background="@drawable/toolbar_dropshadow" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8.0dip"
        android:layout_marginTop="168.0dip"
        android:clickable="true"
        android:onClick="selectFab1"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="@color/fab_pressed"
        fab:fab_icon="@drawable/ic_notifications_off_grey600_24dp"
        fab:fab_size="normal" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8.0dip"
        android:layout_marginTop="168.0dip"
        android:clickable="true"
        android:onClick="selectFab2"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="@color/fab_pressed"
        fab:fab_icon="@drawable/ic_notifications_on_white_24dp"
        fab:fab_size="normal" />
</RelativeLayout>